add login and data Payroll backend

--- a/AISSystem/src/main/resources/datasource-cfg.properties
+++ b/AISSystem/src/main/resources/datasource-cfg.properties
@@ -1,6 +1,6 @@
 # DataSource
  
 ds.database-driver=com.mysql.jdbc.Driver
-ds.url=jdbc:mysql://localhost:3306/payroll?useSSL=false
+ds.url=jdbc:mysql://localhost:3306/payroll
 ds.username=root
 ds.password=
